--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								<ul class="team-social-list list">
 									<li class="team-social-item">
 										<a class="team-social-link link" href="" rel="noopener noreferrer">
-											<svg class="team-social-icon" width="16" height="16">
+											<svg class="team-social-icon" transition="background-color 250ms cubic-bezier(0.4, 0, 0.2, 1" width="16" height="16">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
