--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					>
 					<ul class="header-nav-item list">
 						<li class="header-nav-list">
-							<a class="header-nav-link link" href="./index.html">Studio</a>
+							<a class="header-nav-link link active" href="./index.html">Studio</a>
 						</li>
 						<li class="header-nav-list">
 							<a class="header-nav-link link" href="./portfolio.html"
