--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 							<a class="header-nav-link link" href="./index.html">Studio</a>
 						</li>
 						<li class="header-nav-list">
-							<a class="header-nav-link link" href="./portfolio.html"
+							<a class="header-nav-link link active" href="./portfolio.html"
 								>Portfolio</a>
 						</li>
 						<li class="header-nav-list">
