--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
 			<section class="hero">
 				<div class="container">
 					<h1 class="hero-title">Effective Solutions for Your Business</h1>
-					<button class="hero-button button" type="button">Order Service</button>
+					<button data-modal-open class="hero-button button" type="button">Order Service</button>
+						<div data-modal class="backdrop is-hidden">
+							<div class="modal">
+								
+								<button data-modal-close> </button>
+							</div>
+						</div>
 				</div>
 			</section>
 			<!-- section 2 -->
@@ -439,5 +445,6 @@
 				</div>
 			</div>
 		</footer>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
