--- a/index.html
+++ b/index.html
@@ -441,9 +441,9 @@
 		</footer>
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
-				<button class="modal-close-button" data-modal-close> 
-					<svg class="modal-close-icon" width="12" height="12">
-						<use href="./images/icons/hero-icon/close.svg"></use>
+				<button type="button" class="modal-close-button " data-modal-close> 
+					<svg class="modal-close-icon" width="10" height="10">
+						<use href="./images/icons.svg#icon-close-modal" ></use>
 					</svg>
 				</button>
 			</div>
