--- a/portfolio.html
+++ b/portfolio.html
@@ -79,24 +79,38 @@
 					<ul class="main-card-list list">
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/banking.jpg"
-									alt="app"
-									width="360"
-									height="300"/>
-								<div class="main-card-container">
-									<h2 class="main-card-title">Banking App Interface Concept</h2>
-									<p class="main-card-text">App</p>
+								<div class="card-thumb">
+									<img
+										src="./images/card/banking.jpg"
+										alt="app"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
 								</div>
+									<div class="main-card-container">
+										<h2 class="main-card-title">Banking App Interface Concept</h2>
+										<p class="main-card-text">App</p>
+									</div>
 							</a>
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/cashless-payment.jpg"
-									alt="payment"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/cashless-payment.jpg"
+										alt="payment"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+									</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Cashless Payment</h2>
 									<p class="main-card-text">Marketing</p>
@@ -105,11 +119,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/meditation-app.jpg"
-									alt="display"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/meditation-app.jpg"
+										alt="display"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Meditation App</h2>
 									<p class="main-card-text">App</p>
@@ -118,11 +139,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/taxi-service.jpg"
-									alt="service"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/taxi-service.jpg"
+										alt="service"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Taxi Service</h2>
 									<p class="main-card-text">Marketing</p>
@@ -131,11 +159,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/screen-illustrations.jpg"
-									alt="illustrations"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/screen-illustrations.jpg"
+										alt="illustrations"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Screen Illustrations</h2>
 									<p class="main-card-text">Design</p>
@@ -144,11 +179,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/online-courses.jpg"
-									alt="courses"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/online-courses.jpg"
+										alt="courses"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Online Courses</h2>
 									<p class="main-card-text">Marketing</p>
@@ -157,11 +199,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/instagram.jpg"
-									alt="instagram stories"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/instagram.jpg"
+										alt="instagram stories"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Instagram Stories Concept</h2>
 									<p class="main-card-text">Design</p>
@@ -170,11 +219,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/organic-food.jpg"
-									alt="food"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/organic-food.jpg"
+										alt="food"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Organic Food</h2>
 									<p class="main-card-text">Web Site</p>
@@ -183,11 +239,18 @@
 						</li>
 						<li class="card">
 							<a class="main-card-link link" href="#">
-								<img
-									src="./images/card/fresh-coffee.jpg"
-									alt="coffee"
-									width="360"
-									height="300"/>
+								<div class="card-thumb">
+									<img
+										src="./images/card/fresh-coffee.jpg"
+										alt="coffee"
+										width="360"
+										height="300"/>
+										<div class="overlay">
+											<p class="overlay-text">
+												14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+											</p>
+										</div>
+								</div>
 								<div class="main-card-container">
 									<h2 class="main-card-title">Fresh Coffee</h2>
 									<p class="main-card-text">Web Site</p>
