--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
 				</div>
 			</div>
 		</footer>
+		<!-- modal -->
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="modal-close-button " data-modal-close> 
