--- a/portfolio.html
+++ b/portfolio.html
@@ -306,6 +306,14 @@
 						</li>
 					</ul>
 				</div>
+				<div class="footer-form">
+					<form>
+						<label for="">
+							user header
+							<input type="text">
+						</label>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
