--- a/index.html
+++ b/index.html
@@ -447,6 +447,9 @@
 						<use href="./images/icons.svg#icon-close-modal" ></use>
 					</svg>
 				</button>
+				<p class="modal-title">
+					Leave your contacts and we will call you back
+				</p>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
