--- a/index.html
+++ b/index.html
@@ -450,8 +450,17 @@
 				<p class="modal-title">
 					Leave your contacts and we will call you back
 				</p>
+				<div class="modal-form">
+					<form class="modal-form-list">
+						<input type="text" class="modal-input" required placeholder="Name">
+						<input type="text" class="modal-input" placeholder="Phone">
+						<input type="text" class="modal-input" required placeholder="Email">
+						<button type="submit" class="modal-send-button button">Send</button>
+					</form>
+				</div>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
 	</body>
 </html>
+                                                                                                                                                  
