--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 			</div>
 		</footer>
 		<!-- modal -->
-		<div class="backdrop is-hidden" data-modal>
+		<div class="modal-box backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="modal-close-button " data-modal-close> 
 					<svg class="modal-close-icon" width="10" height="10">
@@ -450,14 +450,34 @@
 				<p class="modal-title">
 					Leave your contacts and we will call you back
 				</p>
-				<div class="modal-form">
-					<form class="modal-form-list">
-						<input type="text" class="modal-input" required placeholder="Name">
-						<input type="text" class="modal-input" placeholder="Phone">
-						<input type="text" class="modal-input" required placeholder="Email">
-						<button type="submit" class="modal-send-button button">Send</button>
-					</form>
-				</div>
+				<form class="modal-form-list">
+					<div>
+						<label for="user-name" class="modal-lable">Name</label>
+						<input type="text" 
+							name="user-name"
+							id="user-name" 
+							class="modal-input" 
+							required placeholder=""
+							minlength="3">
+					</div>
+					<div>
+						<label for="user-phone" class="modal-lable">Phone</label>
+						<input type="tel" 
+							name="user-phone" 
+							id="user-phone" 
+							class="modal-input" 
+							placeholder="">
+					</div>
+					<div>
+						<label for="user-email" class="modal-lable">Email</label>
+						<input type="email" 
+							name="user-email" 
+							id="user-email" 
+							class="modal-input" 
+							required placeholder="">
+					</div>
+					<button type="submit" class="modal-send-button button">Send</button>
+				</form>
 			</div>
 		</div>
 		<script src="./js/modal.js"></script>
