--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 					Leave your contacts and we will call you back
 				</p>
 				<form class="modal-form-list">
-					<div>
+					<div class="modal-form">
 						<label for="user-name" class="modal-lable">Name</label>
 						<input type="text" 
 							name="user-name"
@@ -459,22 +459,42 @@
 							class="modal-input" 
 							required placeholder=""
 							minlength="3">
+						<svg class="modal-icon" width="18" height="24">
+							<use href="./images/icons.svg#icon-name" ></use>
+						</svg>
 					</div>
-					<div>
+					<div class="modal-form">
 						<label for="user-phone" class="modal-lable">Phone</label>
 						<input type="tel" 
 							name="user-phone" 
 							id="user-phone" 
 							class="modal-input" 
 							placeholder="">
+						<svg class="modal-icon" width="18" height="24">
+							<use href="./images/icons.svg#icon-phone" ></use>
+						</svg>
 					</div>
-					<div>
+					<div class="modal-form">
 						<label for="user-email" class="modal-lable">Email</label>
 						<input type="email" 
 							name="user-email" 
 							id="user-email" 
 							class="modal-input" 
 							required placeholder="">
+						<svg class="modal-icon" width="18" height="24">
+							<use href="./images/icons.svg#icon-email" ></use>
+						</svg>
+					</div>
+					<div class="modal-comment">
+						<label for="user-comment" class="modal-lable">Comment</label>
+						<textarea
+						name="user-comment"
+						id="user-comment"
+						class="modal-input-comment"
+						placeholder="Text input"></textarea>
+					</div>
+					<div class="">
+
 					</div>
 					<button type="submit" class="modal-send-button button">Send</button>
 				</form>
