--- a/index.html
+++ b/index.html
@@ -493,8 +493,13 @@
 						class="modal-input-comment"
 						placeholder="Text input"></textarea>
 					</div>
-					<div class="">
-
+					<div class="modal-checkbox">
+						<input type="checkbox"
+							name="user-privacy"
+							id="user-privacy"
+							class="visually-hidden"
+							value="true">
+						<label for="user-privacy" class="modal-checkbox-lable">I accept the terms and conditions of the<span class="checkbox-lable"></span></label>
 					</div>
 					<button type="submit" class="modal-send-button button">Send</button>
 				</form>
