--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@
 						<input type="checkbox"
 							name="user-privacy"
 							id="user-privacy"
-							class="input-check"
+							class="input-check visually-hidden"
 							value="true">
 						<label for="user-privacy" class="check-text">
 							<span><svg class="check-icon" width="10" height="8">
 								<use href="./images/icons.svg#icon-check"></use>
 							</svg>
-							</span> accept the terms and conditions of the 
+							</span> I accept the terms and conditions of the 
 							<a href="#">Privacy Policy</a></label>
 					</div>
 					<button type="submit" class="modal-send-button button">Send</button>
