--- a/index.html
+++ b/index.html
@@ -437,12 +437,28 @@
 						</li>
 					</ul>
 				</div>
+				<div class="footer-bottom">
+					<p class="footer-form-title">Subscribe</p>
+					<form class="footer-form">
+						<label for="footer-email"></label>
+						<input type="email" 
+							name="footer-email" 
+							id="footer-email" 
+							class="footer-input"
+							placeholder="E-mail">
+						<button type="submit" class="submit-button">Subscribe 
+							<svg class="footer-send-icon" width="24" height="24">
+								<use href="./images/icons.svg#icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
 		<!-- modal -->
 		<div class="modal-box backdrop is-hidden" data-modal>
 			<div class="modal">
-				<button type="button" class="modal-close-button"> 
+				<button type="button" class="modal-close-button" data-modal-close> 
 					<svg class="modal-close-icon" width="10" height="10">
 						<use href="./images/icons.svg#icon-close-modal" ></use>
 					</svg>
