--- a/portfolio.html
+++ b/portfolio.html
@@ -306,6 +306,22 @@
 						</li>
 					</ul>
 				</div>
+				<div class="footer-bottom">
+					<p class="footer-form-title">Subscribe</p>
+					<form class="footer-form">
+						<label for="footer-email"></label>
+						<input type="email" 
+							name="footer-email" 
+							id="footer-email" 
+							class="footer-input"
+							placeholder="E-mail">
+						<button type="submit" class="submit-button">Subscribe 
+							<svg class="footer-send-icon" width="24" height="24">
+								<use href="./images/icons.svg#icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
