--- a/index.html
+++ b/index.html
@@ -440,12 +440,13 @@
 				<div class="footer-bottom">
 					<p class="footer-form-title">Subscribe</p>
 					<form class="footer-form">
-						<label for="footer-email"></label>
-						<input type="email" 
+						<label for="footer-email" class="footer-sub" >
+							<input type="email" 
 							name="footer-email" 
 							id="footer-email" 
 							class="footer-input"
 							placeholder="E-mail">
+						</label>
 						<button type="submit" class="submit-button">Subscribe 
 							<svg class="footer-send-icon" width="24" height="24">
 								<use href="./images/icons.svg#icon-send"></use>
