--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 			<div class="modal">
 				<button type="button" class="modal-close-button" data-modal-close> 
 					<svg class="modal-close-icon" width="10" height="10">
-						<use href="./images/icons.svg#icon-close-modal" ></use>
+						<use href="./images/icons.svg#icon-close" ></use>
 					</svg>
 				</button>
 				<p class="modal-title">
